[gd_scene load_steps=7 format=2]

[ext_resource path="res://title/customization/assets/images/themes/default/default.png" type="Texture" id=1]
[ext_resource path="res://title/customization/assets/images/themes/jungle/jungle.png" type="Texture" id=2]
[ext_resource path="res://title/customization/customization.gd" type="Script" id=3]
[ext_resource path="res://title/customization/assets/images/button_arrow.png" type="Texture" id=4]
[ext_resource path="res://title/customization/assets/images/button.png" type="Texture" id=5]
[ext_resource path="res://title/customization/assets/customization_font.tres" type="DynamicFont" id=6]

[node name="Customization" type="Node2D"]
script = ExtResource( 3 )

[node name="DisplayHolder" type="Node2D" parent="."]

[node name="Display1" type="Node2D" parent="DisplayHolder"]

[node name="TextureRect" type="TextureRect" parent="DisplayHolder/Display1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="DisplayHolder/Display1"]
margin_left = 580.0
margin_top = 246.0
margin_right = 1338.0
margin_bottom = 507.0
custom_fonts/font = ExtResource( 6 )
align = 1
valign = 1

[node name="Display2" type="Node2D" parent="DisplayHolder"]
position = Vector2( 1920, 0 )

[node name="TextureRect" type="TextureRect" parent="DisplayHolder/Display2"]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="DisplayHolder/Display2"]
margin_left = 580.0
margin_top = 246.0
margin_right = 1338.0
margin_bottom = 507.0
custom_fonts/font = ExtResource( 6 )
align = 1
valign = 1

[node name="ButtonLeft" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.705882 )
position = Vector2( 70, 540 )
rotation = 4.71239

[node name="TextureButton" type="TextureButton" parent="ButtonLeft"]
margin_left = -93.0
margin_top = -18.0
margin_right = 97.0
margin_bottom = 31.0
texture_normal = ExtResource( 4 )

[node name="ButtonRight" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.705882 )
position = Vector2( 1850, 540 )
rotation = 1.5708

[node name="TextureButton" type="TextureButton" parent="ButtonRight"]
margin_left = -93.0
margin_top = -18.0
margin_right = 97.0
margin_bottom = 31.0
texture_normal = ExtResource( 4 )

[node name="ButtonSelect" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.705882 )
position = Vector2( 960, 980 )

[node name="TextureButton" type="TextureButton" parent="ButtonSelect"]
margin_left = -93.0
margin_top = -18.0
margin_right = 97.0
margin_bottom = 31.0
texture_normal = ExtResource( 5 )

[node name="Label" type="Label" parent="ButtonSelect"]
margin_left = -93.0
margin_top = -18.0
margin_right = 98.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Select"
align = 1
valign = 1

[node name="ButtonBack" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.705882 )
position = Vector2( 118, 1039 )

[node name="TextureButton" type="TextureButton" parent="ButtonBack"]
margin_left = -93.0
margin_top = -18.0
margin_right = 97.0
margin_bottom = 31.0
texture_normal = ExtResource( 5 )

[node name="Label" type="Label" parent="ButtonBack"]
margin_left = -93.0
margin_top = -18.0
margin_right = 97.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Back"
align = 1
valign = 1

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="ButtonLeft/TextureButton" to="." method="_on_ButtonLeft_pressed"]
[connection signal="pressed" from="ButtonRight/TextureButton" to="." method="_on_ButtonRight_pressed"]
[connection signal="pressed" from="ButtonSelect/TextureButton" to="." method="_on_ButtonSelect_pressed"]
[connection signal="pressed" from="ButtonBack/TextureButton" to="." method="_on_ButtonBack_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
